[tool.poetry]
name = "github-commits-export"
version = "0.1.0"
description = "A tool to export GitHub commits to Excel"
authors = ["Liam King <lrking2103@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.0"
pytz = "^2024.1"
xlsxwriter = "^3.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 